# MiniShell

./: .gitignore  CMakeLists.txt  Makefile  mini-shell
src/: main.c
src/Command/: cmd.c  cmd.h
src/Parser/: cmd.c  parser.h  utils.h
